//write changes we make to UML;
// Template:
// [Class] : aslfdkjasdlkfjasdlkfj

ChessBoard: 
    changed selfInCheck() to isInCheck()

Player: 
    added accessor for isCheckmate(), isStalemate(), getColor()
    !!! player now has access to the chessboard via pointer
    added accessor for board ^^^

AI:
    made generateMove() private
        since we now have pointer to chessboard, removed parameter board

Game: 
    make p1,p2 -> pw pb
    prinstScoreBoard now private method
    made a reset private method to clean up after game finishes
        
Strategies!!!
//Talk about shit we did 

11-28th
    dummy constructor for move to make life easier

11-28
    Player:
        move doMove function from player into chessboard
    Game: 
        added isSetup, isRunning
        added addPiece helper function for setup mode
11-29
    ChessBoard: 
        added trysetpiece
    Makefile: 
        Added preprocessor configurations for Window.h so that we can compile with or without the graphic configurations

11-30
    Piece: 
        added hasmoved, setmoved, moved for all pieces by putting them in superclass
    ChessBoard: 
        added aftermove function that sets moved to true (can also handle other aftermoves later like castling or promotion)
        Added checks for pawn moves in simulateMove that prevent moving diagonally if there is no piece to capture

12-01
    Move: 
        added startPos field
    Pawn:
        added enPassant field, setEnPassant(), getEnPassant()


